minor fix alignment hp

--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -109,7 +109,10 @@
   }
 
   &-right {
-    align-items: flex-end;
+
+    @include breakpoint(large up) {
+      align-items: flex-end;
+    }
   }
 
   &-list {
